# nbxflow

./: .env  README.md  pyproject.toml  requirements-dev.txt  research.md  test_runner.py
examples/: advanced_pipeline.py  notebook_snippets.py  simple_flow.py
nbxflow/: __init__.py  config.py
nbxflow/cli/: __init__.py  __main__.py
nbxflow/cli/commands/: __init__.py  classify.py  contracts.py  export.py  lineage.py
nbxflow/contracts/: ge.py  registry.py  utils.py
nbxflow/core/: datasets.py  facets.py  lineage.py  metrics_adapter.py  otel.py  registry.py  step.py
nbxflow/exporters/: airflow_exporter.py  dagster_exporter.py  graphviz.py  prefect_exporter.py
nbxflow/llm/: classifier.py  client.py  prompts.py  refine_contracts.py
nbxflow/utils/: ids.py  io.py  logging.py  time.py
